# jellychord

./: .gitignore  Dockerfile  README.md  config.yml.example  ffaudio.py  jfapi.py  main.py  pyproject.toml
