[tool.poetry]
name = "jfmusicbot"
version = "0.1.0"
description = ""
authors = ["felix920506 <felix920506@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
py-cord = {extras = ["voice"], version = "^2.6.1"}
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
